# py-context

./: .gitignore  .importanizerc  AUTHORS.rst  HISTORY.rst  Makefile  README.md  README.rst  pyproject.toml  setup.py  tox.ini
.github/workflows/: pr-checks.yml
pycontext/: __init__.py  context.py  signals.py
tests/: test_context.py
