[tool.poetry]
name = "py-context"
version = "0.4.0.dev1"
description = ""
authors = []
license = "MIT"
readme = "README.md"
packages = [
    { include = "pycontext" },
]

[tool.poetry.dependencies]
python = "^3.9"
blinker = "^1.7.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
flake8-pyproject = "^1.2.3"
pytest = "^7.4.4"
pytest-cov = "^4.1.0"
tox = "^4.12.1"

[tool.pytest.ini_options]
addopts = "--cov pycontext --cov-report term --cov-report xml:coverage.xml --cov-report html:htmlcov"

[tool.flake8]
max-line-length = 120
exclude = [".venv", ".git", "__pycache__", "build", "dist"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
